--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -15,6 +15,8 @@ html
 		link(rel='stylesheet' href=`${ares}/css/foundation.css`)
 		link(rel='stylesheet' href=`${ares}/css/app.css`)
 
+		link(href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet")
+
 		<!--[if lt IE 9]>
 		script(src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js")
 		<![endif]-->
