--- a/source/template/common/paths.pug
+++ b/source/template/common/paths.pug
@@ -1,2 +1,2 @@
-- var ares = 'templates/_ares'
-- var svgPath = 'templates/_ares/images/sprite.svg'
+- var ares = 'templates'
+- var svgPath = 'templates/images/sprite.svg'
