--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -1,8 +1,8 @@
 extends ../_template
 
 block variables
-	- var title = ['index page Title','index page description','index page keywords']
+	- var title = ['VPN','index page description','index page keywords']
 
 block content
-	//- INCLUDE BLOCKS
-	//	include ../blocks/..
+	include ../block/_header
+	include ../block/_main-screen
