--- a/source/style/common/base.scss
+++ b/source/style/common/base.scss
@@ -8,3 +8,11 @@ html{
 	line-height: 1.42;
 	-webkit-font-smoothing:antialised;
 }
+h1,h2,h3,h4,h5,h6{
+	margin: 0;
+	padding: 0;
+}
+p{
+	margin: 0;
+	padding: 0;
+}
