--- a/source/template/block/_header.pug
+++ b/source/template/block/_header.pug
@@ -4,7 +4,7 @@ header.header
 			.col-xl-12
 				nav.navbar.navbar-expand-lg.justify-content-sm-center.justify-content-xs-center.justify-content-center.px-0
 					a.navbar-brand(href='/index.html')
-						img.logo-image(src='templates/images/logo.svg')
+						img.logo-image(src='templates/images/vpninvisible-logo.svg')
 					button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarToggle' aria-controls='navbarToggle')
 						span.navbar-toggle-icon
 					.collapse.navbar-collapse#navbarToggle
