--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -6,3 +6,8 @@ block variables
 block content
 	include ../block/_header
 	include ../block/_main-screen
+	include ../block/_work-with
+	include ../block/_reason
+	include ../block/_why
+	include ../block/_how-it-work
+	include ../block/_pricing
