--- a/source/template/block/_main-screen.pug
+++ b/source/template/block/_main-screen.pug
@@ -1,9 +1,9 @@
 section.main
 	.container
 		.row
-			.col-xl-12
-				.main-screen.py-5
-					h1.main-screen__header Stay invisible with one touch.
-					p.main-screen__text The simplest VPN App.
+			.col-xl-6
+				.main-screen
+					h1.main-screen__header.mb-3 Stay invisible with one touch.
+					p.main-screen__text.mb-5 The simplest VPN App. 
 						a.main-screen__link(href='#') Try it for free.
-					a.main-screen__btn.button-default Get it now!
+					a.main-screen__btn.button-default(href='#') Get it now!
