--- a/source/template/block/_main-screen.pug
+++ b/source/template/block/_main-screen.pug
@@ -2,8 +2,8 @@ section.main
 	.container
 		.row
 			.col-xl-6
-				.main-screen
-					h1.main-screen__header.mb-3 Stay invisible with one touch.
-					p.main-screen__text.mb-5 The simplest VPN App. 
+				.main-screen.d-flex.flex-column.align-items-center.align-items-lg-start
+					h1.main-screen__header.mb-3.text-center.text-lg-left Stay invisible with one touch.
+					p.main-screen__text.mb-5.text-center.text-lg-left The simplest VPN App. 
 						a.main-screen__link(href='#') Try it for free.
 					a.main-screen__btn.button-default(href='#') Get it now!
