--- a/source/template/block/_header.pug
+++ b/source/template/block/_header.pug
@@ -3,7 +3,7 @@ header.header
 		.row
 			.col-xl-12
 				nav.navbar.navbar-expand-lg.justify-content-sm-center.justify-content-xs-center.justify-content-center.px-0
-					a.navbar-brand(href='/index.html')
+					a.navbar-brand.mr-0(href='/index.html')
 						img.logo-image(src='templates/images/vpninvisible-logo.svg')
 					button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarToggle' aria-controls='navbarToggle')
 						span.navbar-toggle-icon
