--- a/source/template/block/_pricing.pug
+++ b/source/template/block/_pricing.pug
@@ -6,20 +6,18 @@ section.pricing
 		.row
 			.offset-xl-2.col-xl-4.text-center
 				.pricing__item.pb-2.item-free
-					.item__time.py-1.mb-5 Free Forever*
+					.item__time.py-2.mb-3 Free Forever*
 					.item__price
-						p.price.mb-3 0
-						p Per month
-					.item__descr
-						p * With promo code from out partners site.
+						p.price.mb-1 0
+						p.interval Per month
+					.item__descr.mb-2 * With promo code from out partners site.
 			.col-xl-4.text-center
 				.pricing__item.pb-2.item
-					.item__time.py-1.mb-5 30 days free
+					.item__time.py-2.mb-3 30 days free
 					.item__price
-						p.price.mb-3 2.75
-						p Per month
-					.item__descr
-						p After free trial expires.
+						p.price.mb-1 2.75
+						p.interval Per month
+					.item__descr.mb-2 After free trial expires.
 		.row
 			.col-xl-12.justify-content-center.d-flex.mt-5
 				a.reasons__btn.button-default(href='') Signup. It's free!
