--- a/source/template/block/_reason.pug
+++ b/source/template/block/_reason.pug
@@ -6,19 +6,19 @@ section.reasons
 				h2.section__header-black.mb-0 Why VPNinvisible is Your Best Choice
 		.row.reasons__icons
 			.offset-xl-1.col-xl-2.d-flex.align-content-end.flex-wrap.justify-content-center
-				img.reasons__image.mb-3(src='templates/images/icon-no-ads.svg')
+				img.reasons__image.mb-3.d-none.d-xl-block(src='templates/images/icon-no-ads.svg')
 				p.reasons__text.mb-0 No Advertising
 			.col-xl-2.d-flex.align-content-end.flex-wrap.justify-content-center
-				img.reasons__image.mb-3(src='templates/images/icon-high-speed.svg')
+				img.reasons__image.mb-3.d-none.d-xl-block(src='templates/images/icon-high-speed.svg')
 				p.reasons__text.mb-0 High speed
 			.col-xl-2.d-flex.align-content-end.flex-wrap.justify-content-center
-				img.reasons__image.mb-3(src='templates/images/icon-unlimited-traffic.svg')
+				img.reasons__image.mb-3.d-none.d-xl-block(src='templates/images/icon-unlimited-traffic.svg')
 				p.reasons__text.mb-0 Unlimited traffic
 			.col-xl-2.d-flex.align-content-end.flex-wrap.justify-content-center
-				img.reasons__image.mb-3(src='templates/images/icon-uptime.svg')
+				img.reasons__image.mb-3.d-none.d-xl-block(src='templates/images/icon-uptime.svg')
 				p.reasons__text.mb-0 99% Uptime
 			.col-xl-2.d-flex.align-content-end.flex-wrap.justify-content-center
-				img.reasons__image.mb-3(src='templates/images/icon-simple-to-use.svg')
+				img.reasons__image.mb-3.d-none.d-xl-block(src='templates/images/icon-simple-to-use.svg')
 				p.reasons__text.mb-0 Simple to use
 		.row
 			.col-xl-12.justify-content-center.d-flex
