--- a/source/template/block/_footer.pug
+++ b/source/template/block/_footer.pug
@@ -4,10 +4,10 @@ footer.footer
 			.col-xl-12.text-center
 				h6.section__header.mb-5 Download Mobile App
 		.row.mb-5
-			.offset-xl-2.col-xl-4.d-flex.justify-content-end
+			.offset-xl-2.col-xl-4.d-flex.justify-content-center.justify-content-xl-end.mb-3.mb-xl-0
 				a(href='#')
 					.app-store-icon
-			.col-xl-4.d-flex.justify-content-start
+			.col-xl-4.d-flex.justify-content-center.justify-content-xl-start
 				a(href='#')
 					.google-store-icon
 		.row
