--- a/source/template/block/_header.pug
+++ b/source/template/block/_header.pug
@@ -5,7 +5,7 @@ header.header
 				nav.navbar.navbar-expand-lg.justify-content-sm-center.justify-content-xs-center.justify-content-center.px-0
 					a.navbar-brand.mr-0(href='/index.html')
 						img.logo-image(src='templates/images/vpninvisible-logo.svg')
-					button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarToggle' aria-controls='navbarToggle')
+					//- button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarToggle' aria-controls='navbarToggle')
 						span.navbar-toggle-icon
 					.collapse.navbar-collapse#navbarToggle
 						ul.navbar-nav.align-items-center.ml-auto.mt-3
