--- a/source/template/block/_pricing.pug
+++ b/source/template/block/_pricing.pug
@@ -4,7 +4,7 @@ section.pricing
 			.col-xl-12.text-center
 				h2.section__header-black.mb-0 Pricing plans
 		.row
-			.offset-xl-2.col-xl-4.text-center
+			.offset-xl-2.col-xl-4.text-center.mb-5.mb-xl-0
 				.pricing__item.pb-2.item-free
 					.item__time.py-2.mb-3 Free Forever*
 					.item__price
