--- a/source/template/block/_how-it-work.pug
+++ b/source/template/block/_how-it-work.pug
@@ -4,5 +4,5 @@ section.how
 			.col-xl-12.text-center
 				h2.section__header-black.mb-0 How it works?
 		.row
-			.offset-xl-1.col-xl-10
-				img(src='')
+			.offset-xl-1.col-xl-10.col-12
+				img.how__image(src='templates/images/how.png')
