--- a/source/template/block/_reason.pug
+++ b/source/template/block/_reason.pug
@@ -4,20 +4,20 @@ section.reasons
 			.col-xl-12.text-center
 				h2.section__header-red.mb-3 5 Reasons
 				h2.section__header-black.mb-0 Why VPNinvisible is Your Best Choice
-		.row.reasons__icons
-			.offset-xl-1.col-xl-2.d-flex.align-content-end.flex-wrap.justify-content-center
+		.row.reasons__icons.mb-5
+			.offset-xl-1.col-xl-2.offset-3.offset-sm-4.d-flex.align-content-end.flex-wrap.justify-content-start.justify-content-xl-center
 				img.reasons__image.mb-3.d-none.d-xl-block(src='templates/images/icon-no-ads.svg')
 				p.reasons__text.mb-0 No Advertising
-			.col-xl-2.d-flex.align-content-end.flex-wrap.justify-content-center
+			.col-xl-2.offset-3.offset-sm-4.offset-xl-0.d-flex.align-content-end.flex-wrap.justify-content-start.justify-content-xl-center
 				img.reasons__image.mb-3.d-none.d-xl-block(src='templates/images/icon-high-speed.svg')
 				p.reasons__text.mb-0 High speed
-			.col-xl-2.d-flex.align-content-end.flex-wrap.justify-content-center
+			.col-xl-2.offset-3.offset-sm-4.offset-xl-0.d-flex.align-content-end.flex-wrap.justify-content-start.justify-content-xl-center
 				img.reasons__image.mb-3.d-none.d-xl-block(src='templates/images/icon-unlimited-traffic.svg')
 				p.reasons__text.mb-0 Unlimited traffic
-			.col-xl-2.d-flex.align-content-end.flex-wrap.justify-content-center
+			.col-xl-2.offset-3.offset-sm-4.offset-xl-0.d-flex.align-content-end.flex-wrap.justify-content-start.justify-content-xl-center
 				img.reasons__image.mb-3.d-none.d-xl-block(src='templates/images/icon-uptime.svg')
 				p.reasons__text.mb-0 99% Uptime
-			.col-xl-2.d-flex.align-content-end.flex-wrap.justify-content-center
+			.col-xl-2.offset-3.offset-sm-4.offset-xl-0.d-flex.align-content-end.flex-wrap.justify-content-start.justify-content-xl-center
 				img.reasons__image.mb-3.d-none.d-xl-block(src='templates/images/icon-simple-to-use.svg')
 				p.reasons__text.mb-0 Simple to use
 		.row
