--- a/source/template/block/_work-with.pug
+++ b/source/template/block/_work-with.pug
@@ -1,3 +1,24 @@
 section.work-with
 	.container
 		.row
+			.col-xl-7
+				.work-with__wrapper.d-flex.align-items-center
+					.work-with__header Work with
+					ul.work-with__list.mb-0.d-flex
+						li.work-with__item.d-flex.align-items-center.youtube__item.mr-4
+							i.i-youtube.work-with__icon.mr-2
+							p.work-with__text.mb-0 Youtube Videos
+						li.work-with__item.d-flex.align-items-center.casino__item.mr-4
+							i.i-casino.work-with__icon.mr-2
+							p.work-with__text.mb-0 Online Casinos
+						li.work-with__item.d-flex.align-items-center.adult__item
+							i.i-adult.work-with__icon.mr-2
+							p.work-with__text.mb-0 Adult Content websites
+			.col-xl-5
+				.work-with__wrapper.d-flex.align-items-center
+					.work-with__header Available for
+					ul.work-with__list.mb-0.d-flex
+						li.work-with__item.d-flex.align-items-center.mr-3
+							i.i-android.work-with__icon
+						li.work-with__item.d-flex.align-items-center
+							i.i-ios.work-with__icon
