--- a/source/template/block/_header.pug
+++ b/source/template/block/_header.pug
@@ -9,13 +9,13 @@ header.header
 						span.navbar-toggle-icon
 					.collapse.navbar-collapse#navbarToggle
 						ul.navbar-nav.align-items-center.ml-auto.mt-3
-							li.nav-item
+							li.nav-item.ml-0
 								a.nav-link(href='#') Why our App?
-							li.nav-item
+							li.nav-item.ml-3
 								a.nav-link(href='#') Do I need VPN?
-							li.nav-item
+							li.nav-item.ml-3
 								a.nav-link(href='#') Download
-							li.nav-item
+							li.nav-item.ml-3
 								a.nav-link(href='#') Pricing
-							li.nav-item
+							li.nav-item.ml-3
 								a.nav-link.button-default.button-header(href='#') Signup
