--- a/source/template/block/_pricing.pug
+++ b/source/template/block/_pricing.pug
@@ -4,14 +4,14 @@ section.pricing
 			.col-xl-12.text-center
 				h2.section__header-black.mb-0 Pricing plans
 		.row
-			.offset-xl-2.col-xl-4.text-center.mb-5.mb-xl-0
+			.offset-xl-2.col-xl-4.col-md-6.text-center.mb-5.mb-xl-0
 				.pricing__item.pb-2.item-free
 					.item__time.py-2.mb-3 Free Forever*
 					.item__price
 						p.price.mb-1 0
 						p.interval Per month
 					.item__descr.mb-2 * With promo code from out partners site.
-			.col-xl-4.text-center
+			.col-xl-4.col-md-6.text-center
 				.pricing__item.pb-2.item
 					.item__time.py-2.mb-3 30 days free
 					.item__price
