--- a/source/template/block/_work-with.pug
+++ b/source/template/block/_work-with.pug
@@ -1,24 +1,24 @@
 section.work-with
 	.container
 		.row
-			.col-xl-7
-				.work-with__wrapper.d-flex.align-items-center
-					.work-with__header Work with
+			.col-xl-7.mb-3.mb-xl-0
+				.work-with__wrapper.d-flex.align-items-center.flex-wrap.flex-md-nowrap
+					.work-with__header.text-center.text-xl-left.mb-3.mb-xl-0 Work with
 					ul.work-with__list.mb-0.d-flex
-						li.work-with__item.d-flex.align-items-center.youtube__item.mr-4
-							i.i-youtube.work-with__icon.mr-2
-							p.work-with__text.mb-0 Youtube Videos
-						li.work-with__item.d-flex.align-items-center.casino__item.mr-4
-							i.i-casino.work-with__icon.mr-2
-							p.work-with__text.mb-0 Online Casinos
-						li.work-with__item.d-flex.align-items-center.adult__item
-							i.i-adult.work-with__icon.mr-2
-							p.work-with__text.mb-0 Adult Content websites
+						li.work-with__item.d-flex.flex-column.flex-xl-row.align-items-center.youtube__item.mr-md-4
+							i.i-youtube.work-with__icon.mr-0.mr-xl-2.mb-2.mb-xl-0
+							p.work-with__text.mb-0.text-center.text-xl-left Youtube Videos
+						li.work-with__item.d-flex.flex-column.flex-xl-row.align-items-center.casino__item.mr-md-4
+							i.i-casino.work-with__icon.mr-0.mr-xl-2.mb-2.mb-xl-0
+							p.work-with__text.mb-0.text-center.text-xl-left Online Casinos
+						li.work-with__item.d-flex.flex-column.flex-xl-row.align-items-center.adult__item
+							i.i-adult.work-with__icon.mr-0.mr-xl-2.mb-2.mb-xl-0
+							p.work-with__text.mb-0.text-center.text-xl-left Adult Content websites
 			.col-xl-5
-				.work-with__wrapper.d-flex.align-items-center
-					.work-with__header Available for
-					ul.work-with__list.mb-0.d-flex
-						li.work-with__item.d-flex.align-items-center.mr-3
+				.work-with__wrapper.d-flex.align-items-center.flex-wrap.flex-md-nowrap
+					.work-with__header.text-center.text-xl-left.mb-3.mb-xl-0 Available for
+					ul.work-with__list.avaliable__list.mb-0.d-flex.flex-wrap.flex-md-nowrap
+						li.work-with__item.d-flex.align-items-center.mr-0.mr-md-3
 							i.i-android.work-with__icon
 						li.work-with__item.d-flex.align-items-center
 							i.i-ios.work-with__icon
