--- a/source/style/common/variables.scss
+++ b/source/style/common/variables.scss
@@ -15,6 +15,7 @@ $white: #fff;
 //Background colors
 $lightBlue: #F4F6FB;
 $deepBlue: #365D96;
+$lightRed: #FFE9E5;
 
 // Border color
 $borderColor: #646464;
