--- a/source/template/block/_header.pug
+++ b/source/template/block/_header.pug
@@ -18,4 +18,4 @@ header.header
 							li.nav-item.ml-3
 								a.nav-link(href='#') Pricing
 							li.nav-item.ml-3
-								a.nav-link.button-default.button-header(href='#') Signup
+								a.nav-link.button-default.button-header(href='/signup.html') Signup
