--- a/source/template/block/_pricing.pug
+++ b/source/template/block/_pricing.pug
@@ -20,4 +20,4 @@ section.pricing
 					.item__descr.mb-2 After free trial expires.
 		.row
 			.col-xl-12.justify-content-center.d-flex.mt-5
-				a.reasons__btn.button-default(href='') Signup. It's free!
+				a.reasons__btn.button-default(href='/signup.html') Signup. It's free!
