--- a/source/template/block/_reason.pug
+++ b/source/template/block/_reason.pug
@@ -5,21 +5,21 @@ section.reasons
 				h2.section__header-red.mb-3 5 Reasons
 				h2.section__header-black.mb-0 Why VPNinvisible is Your Best Choice
 		.row.reasons__icons.mb-5
-			.offset-xl-1.col-xl-2.offset-3.offset-sm-4.d-flex.align-content-end.flex-wrap.justify-content-start.justify-content-xl-center
-				img.reasons__image.mb-3.d-none.d-xl-block(src='templates/images/icon-no-ads.svg')
-				p.reasons__text.mb-0 No Advertising
-			.col-xl-2.offset-3.offset-sm-4.offset-xl-0.d-flex.align-content-end.flex-wrap.justify-content-start.justify-content-xl-center
-				img.reasons__image.mb-3.d-none.d-xl-block(src='templates/images/icon-high-speed.svg')
-				p.reasons__text.mb-0 High speed
-			.col-xl-2.offset-3.offset-sm-4.offset-xl-0.d-flex.align-content-end.flex-wrap.justify-content-start.justify-content-xl-center
-				img.reasons__image.mb-3.d-none.d-xl-block(src='templates/images/icon-unlimited-traffic.svg')
-				p.reasons__text.mb-0 Unlimited traffic
-			.col-xl-2.offset-3.offset-sm-4.offset-xl-0.d-flex.align-content-end.flex-wrap.justify-content-start.justify-content-xl-center
-				img.reasons__image.mb-3.d-none.d-xl-block(src='templates/images/icon-uptime.svg')
-				p.reasons__text.mb-0 99% Uptime
-			.col-xl-2.offset-3.offset-sm-4.offset-xl-0.d-flex.align-content-end.flex-wrap.justify-content-start.justify-content-xl-center
-				img.reasons__image.mb-3.d-none.d-xl-block(src='templates/images/icon-simple-to-use.svg')
-				p.reasons__text.mb-0 Simple to use
+			.offset-lg-1.col-lg-2.col-12.mb-1.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
+				img.reasons__image.mb-3.d-none.d-lg-block.mx-auto(src='templates/images/icon-no-ads.svg')
+				p.reasons__text.d-inline-block.text-left.text-lg-center.mb-0 No Advertising
+			.col-lg-2.col-12.mb-1.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
+				img.reasons__image.mb-3.d-none.d-lg-block.mx-auto(src='templates/images/icon-high-speed.svg')
+				p.reasons__text.d-inline-block.text-left.text-lg-center.mb-0 High speed
+			.col-lg-2.col-12.mb-1.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
+				img.reasons__image.mb-3.d-none.d-lg-block.mx-auto(src='templates/images/icon-unlimited-traffic.svg')
+				p.reasons__text.d-inline-block.text-left.text-lg-center.mb-0 Unlimited traffic
+			.col-lg-2.col-12.mb-1.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
+				img.reasons__image.mb-3.d-none.d-lg-block.mx-auto(src='templates/images/icon-uptime.svg')
+				p.reasons__text.d-inline-block.text-left.text-lg-center.mb-0 99% Uptime
+			.col-lg-2.col-12.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
+				img.reasons__image.mb-3.d-none.d-lg-block.mx-auto(src='templates/images/icon-simple-to-use.svg')
+				p.reasons__text.d-inline-block.text-left.text-lg-center.mb-0 Simple to use
 		.row
 			.col-xl-12.justify-content-center.d-flex
-				a.reasons__btn.button-default(href='') Signup. It's free!
+				a.reasons__btn.button-default(href='/signup.html') Signup. It's free!
