--- a/source/template/block/_sign-up.pug
+++ b/source/template/block/_sign-up.pug
@@ -41,9 +41,11 @@ section.signup.mt-5
 									input.form-control(type='text' id='promoCode' placeholder='Enter code' required)
 									.invalid-feedback This promo code is not valid.
 									button.btn.btn-primary.promo__button Apply
+									i.promo-confirm
 						.form-row.mb-3
 							.col-12
 								p.mb-0.signup__gift Free forever with the gift code from our partner sites.
+								p.signup__gift--active.text-center Free Forever*
 						.form-row.mb-3
 							.col-12
 								.signup__terms.pt-4
