--- a/source/template/block/_why.pug
+++ b/source/template/block/_why.pug
@@ -26,5 +26,5 @@ section.why
 						h5.why__header.mb-2.text-center.text-xl-left Online Security
 						p.why__text.mb-0.pr-0.pr-xl-5 Easily unblock sites and services like Adult Content, Online Casinos and Gambling, Video Streaming, Facebook, Twitter, Skype, YouTube and Gmail. Censorship or geographic restrictions become a matter of the past. Unlock the doors of restricted internet and consume your favorite content with total freedom and independence.
 		.row
-			.col-xl-12.justify-content-center.d-flex.mt-5
-				a.reasons__btn.button-default(href='') Signup. It's free!
+			.col-xl-12.justify-content-center.d-flex.mt-3.mt-lg-5
+				a.reasons__btn.button-default(href='/signup.html') Signup. It's free!
