--- a/source/style/blocks/_main.scss
+++ b/source/style/blocks/_main.scss
@@ -1,6 +1,6 @@
 .main{
 	.container{
-		background: url(../images/hero-img.png) no-repeat 100% center;
+		background: url(../images/hero-img.png) no-repeat 98% center;
 	}
 }
 .main-screen{
@@ -40,11 +40,22 @@
 		}
 	}
 }
-@media (max-width: 430px){
+@media (max-width: 480px){
 	.main-screen__header{
 		font-size: 35px;
 	}
 	.main-screen__text{
 		font-size: 22px;
+	}
+	.main-screen{
+		padding: 3rem 0;
+	}
+}
+@media (max-width: 320px){
+	.main-screen__header{
+		font-size: 32px;
+	}
+	.main-screen__text{
+		font-size: 21px;
 	}
 }
