--- a/source/style/blocks/_pricing.scss
+++ b/source/style/blocks/_pricing.scss
@@ -1,5 +1,5 @@
 .pricing{
-	padding: 88px 0 110px;
+	padding: 4.5rem 0 4.3rem;
 	&__item{
 		box-shadow: 0 3px 34px 0 rgba(0,0,0,.1);
 		border-radius: 7px;
@@ -59,5 +59,21 @@
 		font-weight: $bold;
 		border-radius: 7px 7px 0 0;
 		background-color: $blue;
+	}
+}
+@media (max-width: 480px){
+	.pricing{
+		padding: 2.5rem 0 3.75rem;
+		.item__time{
+			font-size: 33px;
+		}
+		.section__header{
+			margin-bottom: 3rem;
+		}
+	}
+}
+@media (max-width: 320px){
+	.pricing{
+		padding: 2rem 0 3.75rem;
 	}
 }
