--- a/source/template/block/_work-with.pug
+++ b/source/template/block/_work-with.pug
@@ -3,7 +3,7 @@ section.work-with
 		.row
 			.col-xl-7.mb-3.mb-xl-0
 				.work-with__wrapper.d-flex.align-items-center.flex-wrap.flex-md-nowrap
-					.work-with__header.text-center.text-xl-left.mb-3.mb-xl-0 Work with
+					.work-with__header.text-center.text-sm-left.mb-3.mb-xl-0 Work with
 					ul.work-with__list.mb-0.d-flex
 						li.work-with__item.d-flex.flex-column.flex-xl-row.align-items-center.youtube__item.mr-md-4
 							i.i-youtube.work-with__icon.mr-0.mr-xl-2.mb-2.mb-xl-0
@@ -16,7 +16,7 @@ section.work-with
 							p.work-with__text.mb-0.text-center.text-xl-left Adult Content websites
 			.col-xl-5
 				.work-with__wrapper.d-flex.align-items-center.flex-wrap.flex-md-nowrap
-					.work-with__header.text-center.text-xl-left.mb-3.mb-xl-0 Available for
+					.work-with__header.text-center.text-sm-left.mb-3.mb-xl-0 Available for
 					ul.work-with__list.avaliable__list.mb-0.d-flex.flex-wrap.flex-md-nowrap
 						li.work-with__item.d-flex.align-items-center.mr-0.mr-md-3
 							i.i-android.work-with__icon
