--- a/source/template/block/_header.pug
+++ b/source/template/block/_header.pug
@@ -10,12 +10,12 @@ header.header
 					.collapse.navbar-collapse#navbarToggle
 						ul.navbar-nav.align-items-center.ml-auto.mt-3
 							li.nav-item.ml-0
-								a.nav-link(href='#') Why our App?
+								a.nav-link(href='#link1') Why our App?
 							li.nav-item.ml-3
-								a.nav-link(href='#') Do I need VPN?
+								a.nav-link(href='#link2') Do I need VPN?
 							li.nav-item.ml-3
-								a.nav-link(href='#') Download
+								a.nav-link(href='#link3') Download
 							li.nav-item.ml-3
-								a.nav-link(href='#') Pricing
+								a.nav-link(href='#link4') Pricing
 							li.nav-item.ml-3
 								a.nav-link.button-default.button-header(href='/signup.html') Signup
