--- a/source/template/block/_main-screen.pug
+++ b/source/template/block/_main-screen.pug
@@ -6,4 +6,4 @@ section.main
 					h1.main-screen__header.mb-3.text-center.text-lg-left Stay invisible with one touch.
 					p.main-screen__text.mb-3.mb-md-5.text-center.text-lg-left The simplest VPN App. 
 						a.main-screen__link(href='#') Try it for free.
-					a.main-screen__btn.button-default(href='#') Get it now!
+					a.main-screen__btn.button-default(href='/signup.html') Get it now!
